--- a/style.css
+++ b/style.css
@@ -1,53 +1,77 @@
 .row {
     margin-bottom: 20px;
+    font-size: 0;
+    text-align: center;
 }
-.row::after {
-    content: "";
-    display: table;
-    clear: both;
+.row--bublik {
+    justify-content: space-between;
 }
+/*.row::after {*/
+/*content: "";*/
+/*display: table;*/
+/*clear: both;*/
+/*}*/
 .column {
-    float: left;
+    /*background-color: gray;*/
+    /*height: 200px;*/
+    /*margin: 0 1%;*/
+    display: inline-block;
+    font-size: 1rem;
+    box-sizing: border-box;
+    padding: 0 0.5rem;
+
+}
+.inner {
     background-color: gray;
-    height: 200px;
-    margin: 0 1%;
+    height: 100px;
 }
 .column--3 {
-    width: calc(100%/3 - 2%);
+    width: calc(100% / 3);
 }
+
 .column--7 {
-    width: calc(100%/7 - 2%);
+    width: calc(100% / 7);
 }
+
 .column--9 {
-    width: calc(100%/9 - 2%);
+    width: calc(100% / 9);
 }
+
 .column--10 {
-    width: calc(100%/10 - 2%);
+    width: calc(100% / 10);
 }
+
 .column--11 {
-    width: calc(100%/11 - 2%);
+    width: calc(100% / 11);
 }
+
 .column--12 {
-    width: calc(100%/12 - 2%);
+    width: calc(100% / 12);
 }
+
 .column--4 {
     width: 23%;
 }
+
 .column--2 {
-    width: 40%;
+    width: calc(100% / 2);
 }
+
 .column--6 {
-    width: calc(100%/6 - 2%);
+    width: calc(100% / 6);
 }
+
 .column--8 {
-    width: calc(100%/8 - 2%);
+    width: calc(100% / 8);
 }
+
 .column--5 {
-    width: calc(100%/5 - 2%);
+    width: calc(100% / 5);
 }
+
 /*.column:first-child {*/
-    /*margin-left: 0;*/
+/*margin-left: 0;*/
 /*}*/
 /*.column:last-child {*/
-    /*margin-right: 0;*/
+/*margin-right: 0;*/
 /*}*/
