--- a/main.css
+++ b/main.css
@@ -1,37 +1,54 @@
 * {
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-size: 0;
-
 }
-
+main {
+    margin: auto;
+}
 section {
     display: flex;
     max-width: 1200px;
     flex-flow: wrap;
+    margin: auto;
 }
-
 .row {
     display: flex;
     flex-flow: wrap;
     align-items: center;
     max-width: 100%;
+    padding-top: 20px;
 }
 .insiderow {
     display: flex;
     flex-flow: nowrap;
     align-items: center;
+    padding-top: 20px;
 }
-
+.insiderow:nth-child(1){
+    padding-top: 0;
+}
 .col1-2 {
-    width: calc(100%/2);
+    width: calc(100% / 2);
+    padding-right: 20px;
+}
+.col1-2:nth-child(){
+    padding-right: 0;
 }
 .col1-3 {
-    width: calc(100%/3);
+    width: calc(100% / 3);
+    padding-right: 20px;
 }
+
 .col1-6 {
-    width: calc(100%/6);
+    width: calc(100% / 6);
+    padding-right: 20px;
+}
+.insidecol1-2 {
+    width: calc(100% / 2);
+    padding-right: 20px;
+}
+.insidecol1-3 {
+    width: calc(100% / 3);
+    padding-right: 20px;
 }
 
 img {
